--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
         "url": "https://github.com/BlackrockDigital/startbootstrap-business-casual.git"
     },
     "dependencies": {
+        "@amcharts/amcharts4": "^4.2.3",
+        "@amcharts/amcharts4-geodata": "^4.1.4",
         "bootstrap": "4.3.1",
         "jquery": "3.3.1"
     },
